try 4 with vercel.json and delete echo build

--- a/views/sign-in.ejs
+++ b/views/sign-in.ejs
@@ -48,7 +48,7 @@
               </div>
             </a>
             <div id="signin">
-              Create account &nbsp;<a href="/user/sign-in">SIGN UP</a>
+              Create account &nbsp;<a href="/user/sign-up">SIGN UP</a>
             </div>
           </td>
         </tr>
