try 18 (with app.use('/sounds'), sounds music.js, socket_engine,chat_socket path in mongostore and view ,4 update with home-portfoilio.ejs) vercel.json and delete echo build

--- a/views/music.ejs
+++ b/views/music.ejs
@@ -34,7 +34,7 @@
            <h1>&nbsp; Your Song Playlist </h1>
         
            <div class="songItem" value="0">
-                <img src="f.jpg" alt="1">
+                <img src="" alt="1">
                 <span class="SongName">song-name</span>
                 <span class="songlistplay">
                     <span class="song-duration">0.5:34</span>
@@ -43,7 +43,7 @@
            </div>
 
            <div class="songItem" value="1">
-                <img src="f.jpg" alt="1">
+                <img src="" alt="1">
                 <span class="SongName">song-name</span>
                 <span class="songlistplay">
                     <span class="song-duration">0.5:34</span>
@@ -51,7 +51,7 @@
                 </span>
            </div>
             <div class="songItem" value="2">
-                <img src="f.jpg" alt="1">
+                <img src="" alt="1">
                 <span class="SongName">song-name</span>
                 <span class="songlistplay">
                     <span class="song-duration">0.5:34</span>
@@ -60,7 +60,7 @@
             </div>
 
             <div class="songItem" value="3">
-                <img src="f.jpg" alt="1">
+                <img src="" alt="1">
                 <span class="SongName">song-name</span>
                 <span class="songlistplay">
                     <span class="song-duration">0.5:34</span>
@@ -69,7 +69,7 @@
             </div>
 
             <div class="songItem" value="4">
-                <img src="f.jpg" alt="1">
+                <img src="" alt="1">
                 <span class="SongName">song-name</span>
                 <span class="songlistplay">
                     <span class="song-duration">0.5:34</span>
@@ -79,7 +79,7 @@
 
 
             <div class="songItem" value="5">
-                    <img src="f.jpg" alt="1">
+                    <img src="" alt="1">
                     <span class="SongName">song-name</span>
                     <span class="songlistplay">
                         <span class="song-duration">0.5:34</span>
@@ -88,7 +88,7 @@
             </div>
 
             <div class="songItem" value="6">
-                <img src="f.jpg" alt="1">
+                <img src="" alt="1">
                 <span class="SongName">song-name</span>
                 <span class="songlistplay">
                     <span class="song-duration">0.5:34</span>
@@ -96,7 +96,7 @@
                 </span>
             </div>
             <div class="songItem" value="7">
-                <img src="f.jpg" alt="1">
+                <img src="" alt="1">
                 <span class="SongName">song-name</span>
                 <span class="songlistplay">
                     <span class="song-duration">0.5:34</span>
@@ -104,7 +104,7 @@
                 </span>
             </div>
             <div class="songItem" value="8">
-                <img src="f.jpg" alt="1">
+                <img src="" alt="1">
                 <span class="SongName">song-name</span>
                 <span class="songlistplay">
                     <span class="song-duration">0.5:34</span>
@@ -112,7 +112,7 @@
                 </span>
             </div>
             <div class="songItem" value="9">
-                <img src="f.jpg" alt="1">
+                <img src="" alt="1">
                 <span class="SongName">song-name</span>
                 <span class="songlistplay">
                     <span class="song-duration">0.5:34</span>
