try 20 (with app.use('/sounds'), sounds music.js, socket_engine,chat_socket path in mongostore and view ,4 update with home-portfoilio.ejs) vercel.json and delete echo build

--- a/views/music.ejs
+++ b/views/music.ejs
@@ -176,10 +176,10 @@ let songs = [
     {songName:"Excuses",songDuration:"0.2:56",filepath:"/sounds/song/1.mp3", coverPath: "/images/covers/2.jpg"},
     {songName:"Love Nwantiti",songDuration:"0.2:42",filepath:"/sounds/song/2.mp3", coverPath: "/images/covers/3.jpg"},
     {songName:"let me down slowly",songDuration:"0.5:34",filepath:"/sounds/song/0.mp3", coverPath: "/images/covers/4.jpg"},
-    {songName:"Excuses",songDuration:"0.2:56",filepath:"/sounds/song/1.mp3", coverPath: "/images/covers/5.jpg"},
+    {songName:"calm down",songDuration:"0.3:59",filepath:"/sounds/song/1.mp3", coverPath: "/images/covers/5.jpg"},
     {songName:"Love Nwantiti ",songDuration:"0.2:42",filepath:"/sounds/song/2.mp3", coverPath: "/images/covers/6.jpg"},
     {songName:"let me down slowly ",songDuration:"0.5:34",filepath:"/sounds/song/0.mp3", coverPath: "/images/covers/1.jpg"},
-    {songName:"Love Nwantiti",songDuration:"0.2:42",filepath:"/sounds/song/2.mp3", coverPath: "/images/covers/2.jpg"},
+    {songName:"Love Nwantiti",songDuration:"0.2:42",filepath:"/sounds/song/2.mp3", coverPath: "/images/covers/6.jpg"},
     {songName:"let me down slowly",songDuration:"0.5:34",filepath:"/sounds/song/0.mp3", coverPath: "/images/covers/1.jpg"},
     {songName:"Excuses",songDuration:"0.2:56",filepath:"/sounds/song/1.mp3", coverPath: "/images/covers/2.jpg"},
 ]
