try 22 put all music.js code in music.ejs  (with app.use('/sounds'), sounds music.js, socket_engine,chat_socket path in mongostore and view ,4 update with home-portfoilio.ejs) vercel.json and delete echo build

--- a/assets/css/home-portfolio.css
+++ b/assets/css/home-portfolio.css
@@ -476,6 +476,7 @@ section:nth-child(2n+1)
 
 .port-box:hover .anchor{
     border:1px soild black;
+    background-color: rgb(24, 22, 22);
     color: rgba(221, 11, 11, 0.944);
 }
 
@@ -581,10 +582,10 @@ button:focus {
     margin: 10px auto;
     text-align: center;
     font-weight: 900;
-    color: rgba(222, 167, 155, 0.807);
+    color: rgba(20, 207, 235, 0.807);
     overflow:hidden;
     -webkit-animation: type 2s steps(50, end);
-    animation: type 5s steps(50, end) infinite 1s;
+    animation: type 4s steps(50, end) infinite 1s;
 }
 
 @keyframes type {
