--- a/views/chatEngine.ejs
+++ b/views/chatEngine.ejs
@@ -43,6 +43,7 @@
         </script>       
         <script>
            new ChatEngine('<%=locals.user.name %>')
+           const audio = new Audio('/sounds/notification/chat.mp3');
        </script>
     
     </body>
