--- a/assets/css/basic.css
+++ b/assets/css/basic.css
@@ -4,7 +4,7 @@ body{
 .sign-form{
      position: relative;
      height: 80vh;
-     width: 80vw;
+     width: 50vw;
      top:5vh;
      margin:auto; 
      background-color: white; 
@@ -20,7 +20,7 @@ body{
 
 .sign-form input{
      height: 40px;
-     width: 60vw;
+     width: 40vw;
      border:1px solid rgba(128, 128, 128, 0.664);
      border-radius: 10px;
      margin:10px auto;
@@ -79,4 +79,14 @@ td label{
 }
 #or{
      text-align: center;
+}
+
+@media screen and (max-width:600px)
+{
+.sign-form{
+     width: 80vw;
+ } 
+.sign-form input{
+     width: 60vw;
+}
 }
