--- a/views/home-portfolio.ejs
+++ b/views/home-portfolio.ejs
@@ -60,7 +60,7 @@
                     <a href="#portfolio">Portfolio</a>
                 </li>
                 <li>
-                    <a href="#portfolio">Contact</a>
+                    <a href="#contact">Contact</a>
                 </li>
             </ul>
             <div id="burger">
