--- a/views/home-portfolio.ejs
+++ b/views/home-portfolio.ejs
@@ -114,8 +114,8 @@
             <section id="about">
                <div id="my-pic">
                
-                <img  class="my-pic-img dev-o--blur" id="my-pic2" src="../fb.jpeg">
-                <img class="my-pic-img" src="../f.jpg">
+                <img  class="my-pic-img2 dev-o--blur" id="my-pic2" src="/images/gifs/pic-back4.png">
+                <img class="my-pic-img" src="/images/gifs/my-pic.png">
               </div>
                <div>
                 <p>Recent computer science graduate with passion for developing scalable web applications and working across the full stack. I am looking to join a good company to continue to grow my skill set while contributing to the positive outcome of making people “richer, smarter, and happier. I have always been fascinated by technology and wanted to know how it works So, I became a web developer. if I come across a new technology, it makes curious to know more about it. I believe it’s more about understanding than implementing the technology.”  
