--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -43,7 +43,7 @@
                 height: 80vh;
                 width: 80vw;
                 margin: 20px auto;
-                background-color: rgba(128, 128, 128, 0.378);
+                background-color: rgba(128, 128, 128, 0.338);
                 display: flex;
                 flex-wrap: wrap;
 
@@ -59,6 +59,11 @@
                 #navbar{
                     justify-content: space-between;
                 }
+                #port-box img{
+                    height: 185px;
+                    width: 185px;
+                }
+
                 
 
             }
