--- a/assets/css/chat_box.css
+++ b/assets/css/chat_box.css
@@ -1,11 +1,11 @@
 body{
-    background-color: rgba(137, 43, 226, 0.148);
+    background-color: rgba(255, 255, 255, 0.148);
 }
 #user-chat-box {
     height: 90vh;
     background-color:orangered;
     color: white;
-    width: 70%;
+    width: 40%;
     margin:5px auto; 
     border: 1px solid black;
     border-radius: 10px;
@@ -14,6 +14,38 @@ body{
     flex-direction: column;
  }
  
+
+#video-box{
+        height: 90vh;
+        /* width: 60%; */
+        /* margin:5px auto;  */
+        border-radius: 10px;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+}
+
+#video,#proof{
+        width:100%;
+        height:60%;
+        display: flex;
+        background-color: rgba(96, 229, 247, 0.205);
+        justify-content: center;
+        align-items: center;
+}
+
+
+#proof img{
+        margin-left: 50px;
+
+        height: 80%;
+        width: 70%;
+}
+#video video{
+        margin-left: 50px;
+        height: 70%;
+        width: 50%;
+}
 nav ul{
         display: flex;
         list-style: none;
@@ -120,3 +152,33 @@ nav ul{
         margin-bottom: 2px;
         font: size 10px;
 }
+
+h3{
+        width: fit-content;
+        margin-left: 20px;
+        background-color: rgba(255, 0, 0, 0.149);
+}
+
+@media screen and (max-width:600px){
+        #user-chat-box{
+                width: 70%;
+        }
+        h3{
+                display: none;
+        }
+        #proof img{
+                margin-left: 0px;
+                height: 90%;
+                width: 90%;
+        }
+        #video video{
+                margin-left: 0px;
+                height: 90%;
+                width: 90%;
+        }
+        #proof,#video{
+                height:50%;
+                width: 90%;
+        }
+
+} 
