--- a/assets/css/respons.css
+++ b/assets/css/respons.css
@@ -45,9 +45,9 @@
      
     #my-pic
     {
-        height: 10rem;
-        width: 10rem;
-        margin-top: -5rem;
+        height: 12rem;
+        width: 12rem;
+        margin-top: -7rem;
         margin-bottom: 0px;
     }
     
@@ -87,6 +87,13 @@
         background-color: rgb(24, 22, 22) !important;
         border-bottom: 1px solid white !important;
 
+   }
+   .css-typing{
+    margin-bottom: 0px;
+   }
+   
+   .header-social-icon{
+    margin-top: -20px;
    }
 
 }
