--- a/views/mailers/signup_mailer.ejs
+++ b/views/mailers/signup_mailer.ejs
@@ -51,7 +51,7 @@
   <table role="presentation" style="width:602px;border-collapse:collapse;border:1px solid #cccccc;border-spacing:0;text-align:left;">
     <tr>
       <td align="center" style="padding:40px 0 30px 0;background:#70bbd9;">
-        <img src="/images/gifs/my-picture.png" alt="" width="200" style="height:auto;display:block;" />
+        <img src="https://sanjay-singh.vercel.app/images/gifs/my-picture.png" alt="" width="200" style="height:auto;display:block;" />
         <div class="css-typing">Node.js Web developer
         </div>
       </td>
@@ -78,7 +78,7 @@
                   </td>
                   <td style="width:20px;padding:0;font-size:0;line-height:0;">&nbsp;</td>
                   <td style="width:260px;padding:0;vertical-align:top;color:#153643;">
-                    <p style="margin:0 0 25px 0;font-size:16px;line-height:24px;font-family:Arial,sans-serif;"><img src="/images/gifs/4hsh1.gif" alt="" width="200" style="height:auto;display:block;" /></p>
+                    <p style="margin:0 0 25px 0;font-size:16px;line-height:24px;font-family:Arial,sans-serif;"><img src="https://sanjay-singh.vercel.app/images/gifs/4hsh1.gif" alt="" width="200" style="height:auto;display:block;" /></p>
                     <p style="margin:0 0 12px 0;font-size:16px;line-height:24px;font-family:Barcelony Signature">"HARD WORK BEATS TALENT WHEN TALENT DOES'T WORK HARD"</p>
                     <p style="margin:0;font-size:16px;line-height:24px;font-family:Arial,sans-serif;"><a href="" style="color:#ee4c50;text-decoration:underline;">Please Visit My Website</a></p>
                   </td>
