--- a/views/chatEngine.ejs
+++ b/views/chatEngine.ejs
@@ -53,8 +53,8 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.5.4/socket.io.js" integrity="sha512-YeeA/Qxn5hYdkukScTCNNOhTrv1C2RubAGButJ1rmgQwZf/HdRaCGl+JAVkqsqaNRaYNHdheiuKKuPf9mDcqKg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
         <script src="https://code.jquery.com/jquery-3.6.3.slim.min.js" integrity="sha256-ZwqZIVdD3iXNyGHbSYdsmWP//UBokj2FHAxKuSBKDSo=" crossorigin="anonymous"></script>
 
-        <script src="/javascript/chat_engine.js">
-        </script>       
+        <!-- <script src="/javascript/chat_engine.js">
+        </script>        -->
         <!-- <script>
            new ChatEngine('<%=locals.user.name %>')
            const audio = new Audio('/sounds/notification/chat.mp3');
