--- a/views/mailers/signup_mailer.ejs
+++ b/views/mailers/signup_mailer.ejs
@@ -44,7 +44,7 @@
   </style>
 </head>
 <body style="margin:0;padding:0;">
-  hi <strong> <%= name %> </strong> sir/madam
+  <h2 style="font-size:22px;margin-bottom: 10px;font-family:Arial,sans-serif;">hello <strong> <%= name %> </strong> sir/madam</h2>
 <table role="presentation" style="width:100%;border-collapse:collapse;border:0;border-spacing:0;background:#ffffff;">
 <tr>
 <td align="center" style="padding:0;">
@@ -74,13 +74,13 @@
                     <p style="margin:0 0 10px 0;font-size:16px;line-height:24px;font-family:Arial,sans-serif;" class="my-details-info-container"><i class="fas fa-map-marker-alt"></i><span>faridabad,haryana</span></p>
                     <p style="margin:0 0 10px 0;font-size:16px;line-height:24px;font-family:Arial,sans-serif;" class="my-details-info-container"> <i class="fas fa-mobile-alt"></i><span>9354412061</span></p>
                     <p style="margin:0 0 10px 0;font-size:16px;line-height:24px;font-family:Arial,sans-serif;" class="my-details-info-container"><i class="fas fa-envelope"></i><span>sanjayfbd93544@gmail.com</span></p>
-                    <p style="margin:0;font-size:16px;line-height:24px;font-family:Arial,sans-serif;"><a href="http://www.example.com" style="color:#ee4c50;text-decoration:underline;">Please Visit My Website</a></p>
+                    <p style="margin:0;font-size:16px;line-height:24px;font-family:Arial,sans-serif;"><a href="http://sanjay-singh.vercel.app" style="color:#ee4c50;text-decoration:underline;">Please Visit My Website</a></p>
                   </td>
                   <td style="width:20px;padding:0;font-size:0;line-height:0;">&nbsp;</td>
                   <td style="width:260px;padding:0;vertical-align:top;color:#153643;">
                     <p style="margin:0 0 25px 0;font-size:16px;line-height:24px;font-family:Arial,sans-serif;"><img src="https://sanjay-singh.vercel.app/images/gifs/4hsh1.gif" alt="" width="200" style="height:auto;display:block;" /></p>
                     <p style="margin:0 0 12px 0;font-size:16px;line-height:24px;font-family:Barcelony Signature">"HARD WORK BEATS TALENT WHEN TALENT DOES'T WORK HARD"</p>
-                    <p style="margin:0;font-size:16px;line-height:24px;font-family:Arial,sans-serif;"><a href="" style="color:#ee4c50;text-decoration:underline;">Please Visit My Website</a></p>
+                    <p style="margin:0;font-size:16px;line-height:24px;font-family:Arial,sans-serif;"><a href="http://sanjay-singh.vercel.app" style="color:#ee4c50;text-decoration:underline;">Please Visit My Website</a></p>
                   </td>
                 </tr>
               </table>
@@ -95,17 +95,17 @@
           <tr>
             <td style="padding:0;width:50%;" align="left">
               <p style="margin:0;font-size:14px;line-height:16px;font-family:Arial,sans-serif;color:#ffffff;">
-                &reg; Someone, Somewhere 2023<br/><a href="" style="color:#ffffff;text-decoration:underline;">Unsubscribe</a>
+                &reg; Someone, Somewhere 2023<br/><a href="http://sanjay-singh.vercel.app style="color:#ffffff;text-decoration:underline;">Unsubscribe</a>
               </p>
             </td>
             <td style="padding:0;width:50%;" align="right">
               <table role="presentation" style="border-collapse:collapse;border:0;border-spacing:0;">
                 <tr>
                   <td style="padding:0 0 0 10px;width:38px;">
-                    <a href="" style="color:#ffffff;"><img src="https://assets.codepen.io/210284/tw_1.png" alt="Twitter" width="38" style="height:auto;display:block;border:0;" /></a>
+                    <a href="http://sanjay-singh.vercel.app" style="color:#ffffff;"><img src="https://assets.codepen.io/210284/tw_1.png" alt="Twitter" width="38" style="height:auto;display:block;border:0;" /></a>
                   </td>
                   <td style="padding:0 0 0 10px;width:38px;">
-                    <a href="" style="color:#ffffff;"><img src="https://assets.codepen.io/210284/fb_1.png" alt="Facebook" width="38" style="height:auto;display:block;border:0;" /></a>
+                    <a href="http://sanjay-singh.vercel.app" style="color:#ffffff;"><img src="https://assets.codepen.io/210284/fb_1.png" alt="Facebook" width="38" style="height:auto;display:block;border:0;" /></a>
                   </td>
                 </tr>
               </table>
